# sage-cli

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
sage/: __init__.py  agent.py  attachments.py  cli.py  config.py  confirm.py  http.py  image_gen.py  llm_client.py  models_catalog.py  modes.py  persist.py  prompts.py  sandbox.py  setup_wizard.py  shell_safety.py  tools.py
tests/: test_cli.py  test_config.py  test_setup_wizard.py
